support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_unterm_char.i
%module xxx


const char x = 'H



